--- a/index.html
+++ b/index.html
@@ -8,6 +8,63 @@
     <title>The One True Pizza</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <form id="orderPizza">
+            <div class="form-group">
+              <h3>Pizza Crust</h3>
+              <label>
+                <input type="radio" class="option-input radio" name="crust" value="Thin Crust" />
+                Thin Crust
+              </label>
+              <label>
+                <input type="radio" class="option-input radio" name="crust" value="Regular Crust" checked />
+                Regular Crust
+              </label>
+              <label>
+                <input type="radio" class="option-input radio" name="crust" value="Deep Dish" />
+                Deep Dish
+              </label>
+            </div>
+            <div class="form-group">
+              <h3>Cheese</h3>
+              <label>
+                <input type="radio" class="option-input radio" name="cheese" value="Less Cheese" />
+                Less Cheese
+              </label>
+              <label>
+                <input type="radio" class="option-input radio" name="cheese" value="Normal Cheese" checked />
+                Normal Cheese
+              </label>
+              <label>
+                <input type="radio" class="option-input radio" name="cheese" value="Extra Cheese" />
+                Extra Cheese
+              </label>
+            </div>
+            <div class="form-group">
+              <h3>Meats</h3>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Pepperoni" />
+                Pepperoni
+              </label>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Ham"  />
+                Ham
+              </label>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Salami"  />
+                Salami
+              </label>
+            </div>
+            <button type="submit" class="btn btn-primary">Add to Order</button>
+          </form>
+        </div><!-- end col -->
+        <div class="col-md-6">
 
+          <div id="checkoutCart"></div>
+        </div><!-- end col -->
+      </div><!-- end row -->
+    </div><!-- end container -->
   </body>
 </html>
