add cost to pizza

--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
                 Salami
               </label>
             </div>
+            <div class="form-group">
+              <h3>Veggies</h3>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Green Bell Pepper" />
+                Green Bell Pepper
+              </label>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Onion"  />
+                Onion
+              </label>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Mushrooms"  />
+                Mushrooms
+              </label>
+              <label>
+                <input type="checkbox" class="option-input checkbox" name="meats" value="Olives"  />
+                Olives
+              </label>
+            </div>
             <button type="submit" class="btn btn-primary">Add to Order</button>
           </form>
         </div><!-- end col -->
