--- a/index.html
+++ b/index.html
@@ -10,37 +10,53 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <form id="orderPizza">
             <div class="form-group">
               <h3>Pizza Crust</h3>
-              <label>
-                <input type="radio" class="option-input radio" name="crust" value="Thin Crust" />
-                Thin Crust
-              </label>
-              <label>
-                <input type="radio" class="option-input radio" name="crust" value="Regular Crust" checked />
-                Regular Crust
-              </label>
-              <label>
-                <input type="radio" class="option-input radio" name="crust" value="Deep Dish" />
-                Deep Dish
-              </label>
+              <div class="row">
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="crust" value="Thin Crust" />
+                    Thin Crust
+                  </label>
+                </div>
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="crust" value="Regular Crust" checked />
+                    Regular Crust
+                  </label>
+                </div>
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="crust" value="Deep Dish" />
+                    Deep Dish
+                  </label>
+                </div>
+              </div>
             </div>
             <div class="form-group">
               <h3>Cheese</h3>
-              <label>
-                <input type="radio" class="option-input radio" name="cheese" value="Less Cheese" />
-                Less Cheese
-              </label>
-              <label>
-                <input type="radio" class="option-input radio" name="cheese" value="Normal Cheese" checked />
-                Normal Cheese
-              </label>
-              <label>
-                <input type="radio" class="option-input radio" name="cheese" value="Extra Cheese" />
-                Extra Cheese
-              </label>
+              <div class="row">
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="cheese" value="Less Cheese" />
+                    Less Cheese
+                  </label>
+                </div>
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="cheese" value="Normal Cheese" checked />
+                    Normal Cheese
+                  </label>
+                </div>
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="cheese" value="Extra Cheese" />
+                    Extra Cheese
+                  </label>
+                </div>
+              </div>
             </div>
             <div class="form-group">
               <h3>Meats</h3>
@@ -60,26 +76,26 @@
             <div class="form-group">
               <h3>Veggies</h3>
               <label>
-                <input type="checkbox" class="option-input checkbox" name="meats" value="Green Bell Pepper" />
+                <input type="checkbox" class="option-input checkbox" name="veggies" value="Green Bell Pepper" />
                 Green Bell Pepper
               </label>
               <label>
-                <input type="checkbox" class="option-input checkbox" name="meats" value="Onion"  />
+                <input type="checkbox" class="option-input checkbox" name="veggies" value="Onion"  />
                 Onion
               </label>
               <label>
-                <input type="checkbox" class="option-input checkbox" name="meats" value="Mushrooms"  />
+                <input type="checkbox" class="option-input checkbox" name="veggies" value="Mushrooms"  />
                 Mushrooms
               </label>
               <label>
-                <input type="checkbox" class="option-input checkbox" name="meats" value="Olives"  />
+                <input type="checkbox" class="option-input checkbox" name="veggies" value="Olives"  />
                 Olives
               </label>
             </div>
             <button type="submit" class="btn btn-primary">Add to Order</button>
           </form>
         </div><!-- end col -->
-        <div class="col-md-6">
+        <div class="col-md-4">
 
           <div id="checkoutCart"></div>
         </div><!-- end col -->
