--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
         <div class="col-md-8">
           <form id="orderPizza">
             <div class="form-group">
+              <h3>Pie Size</h3>
+              <div class="row">
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="size" value="Small" />
+                    Small
+                  </label>
+                </div>
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="size" value="Medium Cheese" checked />
+                    Medium
+                  </label>
+                </div>
+                <div class="col-md-4">
+                  <label>
+                    <input type="radio" class="option-input radio" name="size" value="Large" />
+                    Large
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
               <h3>Pizza Crust</h3>
               <div class="row">
                 <div class="col-md-4">
@@ -31,29 +54,6 @@
                   <label>
                     <input type="radio" class="option-input radio" name="crust" value="Deep Dish" />
                     Deep Dish
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <h3>Cheese</h3>
-              <div class="row">
-                <div class="col-md-4">
-                  <label>
-                    <input type="radio" class="option-input radio" name="cheese" value="Less Cheese" />
-                    Less Cheese
-                  </label>
-                </div>
-                <div class="col-md-4">
-                  <label>
-                    <input type="radio" class="option-input radio" name="cheese" value="Normal Cheese" checked />
-                    Normal Cheese
-                  </label>
-                </div>
-                <div class="col-md-4">
-                  <label>
-                    <input type="radio" class="option-input radio" name="cheese" value="Extra Cheese" />
-                    Extra Cheese
                   </label>
                 </div>
               </div>
