add styling to page

--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
                 <div class="form-group">
                   <h3>Meats</h3>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="meats" value="Pepperoni" />
+                    <input type="checkbox" class="option-input checkbox" name="meats" value=" Pepperoni" />
                     Pepperoni
                   </label>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="meats" value="Ham"  />
+                    <input type="checkbox" class="option-input checkbox" name="meats" value=" Ham"  />
                     Ham
                   </label>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="meats" value="Salami"  />
+                    <input type="checkbox" class="option-input checkbox" name="meats" value=" Salami"  />
                     Salami
                   </label>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="meats" value="Italian Sausage"  />
+                    <input type="checkbox" class="option-input checkbox" name="meats" value=" Italian Sausage"  />
                     Italian Sausage
                   </label>
                 </div>
@@ -85,25 +85,25 @@
                 <div class="form-group">
                   <h3>Veggies</h3>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="veggies" value="Green Bell Pepper" />
-                    Green Bell Pepper
+                    <input type="checkbox" class="option-input checkbox" name="veggies" value=" Bell Peppers" />
+                    Bell Peppers
                   </label>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="veggies" value="Onion"  />
-                    Onion
+                    <input type="checkbox" class="option-input checkbox" name="veggies" value=" Onions"  />
+                    Onions
                   </label>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="veggies" value="Mushrooms"  />
+                    <input type="checkbox" class="option-input checkbox" name="veggies" value=" Mushrooms"  />
                     Mushrooms
                   </label>
                   <label>
-                    <input type="checkbox" class="option-input checkbox" name="veggies" value="Olives"  />
+                    <input type="checkbox" class="option-input checkbox" name="veggies" value=" Olives"  />
                     Olives
                   </label>
                 </div>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Add to Order</button>
+            <button type="submit" class="btn btn-orange">Add to Order</button>
           </form>
         </div><!-- end col -->
         <div class="col-md-4">
