add bg image and covert theme to dark

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <h1>THE ONE TRUE PIZZA</h1>
-        <div class="col-md-8">
+        <div class="col-md-8 bgs">
           <form id="orderPizza">
             <div class="form-group">
               <h3>Pie Size</h3>
@@ -103,7 +103,7 @@
                 </div>
               </div>
             </div>
-            <button type="submit" class="btn btn-orange">Add to Order</button>
+            <button type="submit" class="btn btn-orange">Add to Order</button> <br><br>
           </form>
         </div><!-- end col -->
         <div class="col-md-4">
